--- a/src/assets/styles/components/_nav.css
+++ b/src/assets/styles/components/_nav.css
@@ -3,6 +3,10 @@
     z-index: 20;
 }
 
+.flc-toc-tocContainer {
+    margin-block-end: calc(48 / 16 * 1rem);
+}
+
 .nav .menu-toggle {
     background: var(--fl-buttonBgColor, var(--header-bg, transparent));
     block-size: calc(34 / 16 * 1rem);
@@ -565,8 +569,8 @@
 
         &:hover,
         &:focus {
-            background: var(--fl-linkColor, var(--yellow-500));
-            color: var(--fl-bgColor, var(--black));
+            background: var(--fl-linkColor, var(--yellow-500)) !important;
+            color: var(--fl-bgColor, var(--black)) !important;
         }
 
         &:active {
