fix: relabel project pages (resolves #1291)

--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -34,7 +34,7 @@
         <nav class="nav--secondary" aria-labelledby="child-pages-heading">
         {%- if navPages.length %}
         <div class="wrapper">
-            <h2 class="h3" id="child-pages-heading">Child Pages</h2>
+            <h2 class="h3" id="child-pages-heading">Project Pages</h2>
 
             <div class="menu--secondary">
                 <ul>
