fix: issue with margin on home page

--- a/src/assets/styles/pages/_generic.css
+++ b/src/assets/styles/pages/_generic.css
@@ -270,6 +270,7 @@ hr,
     }
 
     .section--image figure.swap + .section__content {
+        padding-inline-end: calc(var(--gutter) + 1.5rem);
         padding-inline-start: 0;
     }
 
