--- a/src/assets/styles/pages/_projects.css
+++ b/src/assets/styles/pages/_projects.css
@@ -29,7 +29,7 @@
     .page--projects {
         .projects {
             display: grid;
-            grid-gap: var(--gutter);
+            gap: var(--gutter);
             grid-template-columns: repeat(2, 1fr);
         }
 
