--- a/src/assets/styles/pages/_generic.css
+++ b/src/assets/styles/pages/_generic.css
@@ -270,8 +270,7 @@ hr,
     }
 
     .section--image figure.swap + .section__content {
-        padding-inline-end: calc(var(--gutter) + 1.5rem);
-        padding-inline-start: 0;
+        padding-inline: 0 calc(var(--gutter) + 1.5rem);
     }
 
     .section--image .section__content + figure {
